--- a/src/pages/Regis/Regis.scss
+++ b/src/pages/Regis/Regis.scss
@@ -15,6 +15,7 @@
        font-style: normal;
        font-weight: 400;
        line-height: normal;
+       padding-bottom: 15px;
     }
     .inp{
      margin-bottom: 40px;
